--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Dégustations</h2>
-                    <h3 class="section-subheading text-muted">Voici les dernières dégustations : les vins, les mets et nos conseils</h3>
+                    <h3 class="section-subheading text-muted">Toutes les infos importantes c'est ici !</h3>
                 </div>
             </div>
             <div class="row">
