Favicon et partenaires
Mise à jur des partenaires, de quelque liens FB, ajout d'un Favicon (en haut à coté de l'URL pour les Nuls ;) ).

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 
     <!-- Theme CSS -->
     <link href="css/agency.css" rel="stylesheet">
-
+    <!-- Logo is called Club_Oeno_Favicon.png, into img repo -->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" >
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -369,25 +371,26 @@
     <!-- Clients Aside -->
     <aside class="clients">
         <div class="container">
-            <div class="row">
+        <h2> Nos partenaires </h2>
+            <div class="row"  >
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
+                    <a href="https://assos.utc.fr/asso/bde">
+                        <img src="img/logos/logo-bde.jpg" class="img-responsive img-centered" alt="" >
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/logo-Fsdie.jpg" class="img-responsive img-centered" alt="" >
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
+                    <a href="http://www.cavavin.fr/action/shops/cavavin-compiegne.html?n=QTM">
+                        <img src="img/logos/logo-cavavin-compiegne.jpg" class="img-responsive img-centered" alt="" >
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
+                    <a  href="http://www.societegenerale.fr/">
+                        <img src="img/logos/logo-societe-generale.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
             </div>
@@ -447,12 +450,12 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        <!--<li><a href="#"><i class="fa fa-twitter"></i></a>
+                        </li> -->
+                        <li><a href="https://www.facebook.com/profile.php?id=100011680653454&fref=ts"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                        </li>
+                       <!-- <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        </li> -->
                     </ul>
                 </div>
                 <div class="col-md-4">
