changement de la photo de fond, changement de la couleur du titre 'club oeno', correction d'une typo

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Paniers Gourmands</h4>
-                    <p class="text-muted">Du vin, de la charcuterie et du fromage dans un même panier, que deande le peuple ?</p>
+                    <p class="text-muted">Du vin, de la charcuterie et du fromage dans un même panier, que demande le peuple ?</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
