--- a/index.html
+++ b/index.html
@@ -113,13 +113,15 @@
                     <h4 class="service-heading">Paniers Gourmands</h4>
                     <p class="text-muted">Du vin, de la charcuterie et du fromage dans un même panier, que demande le peuple ?</p>
                 </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                <div class="col-md-4" >
+                    <a href="apprendre.html">
+                    <span class="fa-stack fa-4x" >
+                        <i class="fa fa-circle fa-stack-2x text-primary" ></i>
                         <i class="fa fa-certificate fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Initiation à l'oenologie</h4>
                     <p class="text-muted">Tu veux apprendre à déguster le vin comme un pro pour te la péter dans les soirées mondaines ? C'est ici !</p>
+                  </a>
                 </div>
             </div>
         </div>
