Indispensable CEPAGE termine!

--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/roundicons.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/indispensable_cepage.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Pays de Loire</h4>
-                        <p class="text-muted">19/10/16</p>
+                        <h4>Cépages</h4>
+                        <p class="text-muted">Les différents types de raisins</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -488,24 +488,40 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2>Dégustations Pays de la Loire</h2>
-                                <p class="item-intro text-muted">Au Philantrope le 19 Octobre 2016 </p>
-                                <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
-                                <p> <strong> Vins 1 :</strong> Cubi de rosé <br/>
-                                    <i> Ne se marie avec rien  </i> <br/>
-                                 <strong> Vins 2 :</strong> Cubi de rouge <br/>
-                                 <i> Se marie avec un steak haché du RU </i><br/>
-                                 <strong> Vins 3 :</strong> Cubi de blanc <br/>
-                                 <strong> Vins 4 :</strong> Cubi de Villageoise <br/>
-                                 </p>
-                                <p>
-                                    <strong>Va vraiment falloir trouver des trucs à dire ;) </strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
-                                <ul class="list-inline">
-                                    <li>Date: July 2014</li>
-                                    <li>Client: Round Icons</li>
-                                    <li>Category: Graphic Design</li>
-                                </ul>
-                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                                <h2>Qu'est ce qu'un cépage ?</h2>
+                                <p class="item-intro text-muted"></p>
+                                <img class="img-responsive img-centered" src="img/portfolio/indispensable_cepage_projet.jpg" alt="">
+                                <p> Le cépage peut se définir comme la variété de vigne utilisée pour faire le vin. Il en existe ainsi plus d’une centaine en France. <br/>
+                                Le cépage à la base d’un vin forme la source principale de ses caractéristiques, que ce soit au niveau de son goût et sa teneur en acides, en tanins et en alcool ou au niveau de son aspect et ses arômes.
+                                <div class="row">
+                                <div class="col-md-6 col-sm-12">
+                                    Les principaux cépages de raisins noirs: 
+                                    <ul class="list_align_left">
+                                        <li> Cabernet sauvignon </li>
+                                         <li> Syrah </li>
+                                        <li> Grenache </li>
+                                        <li> Merlot </li>
+                                        <li> Pinot noir </li>
+                                    </ul>
+                                </div>
+                                <div class="col-md-6 col-sm-12">
+                                    Les principaux cépages de raisins blancs:
+                                    <ul class="list_align_left">
+                                        <li>Chardonnay </li>
+                                        <li>Chenin blanc</li>
+                                        <li>Sauvignon</li>
+                                        <li>Muscat</li>
+                                        <li>Riesling</li>
+                                    </ul>
+                                </div>
+                                </div>
+                                <div style="padding-top: 100px"> 
+                                    <p>
+                                        <h3>Vous voullez en savoir plus ?</h3>
+                                    </p>
+                                    <iframe padding-top="200" width="560" height="315" src="https://www.youtube.com/embed/GHsmzDvdvW4" frameborder="0" allowfullscreen></iframe>
+                                </div>
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Retour à l'acceuil</button>
                             </div>
                         </div>
                     </div>
